# snippets-make

./: Cargo.toml  Makefile  Makefile.toml  README.md
.github/workflows/: release.yml
codes/: gcd.ts
examples/: parse.rs  typescript.toml
examples/codes/: gcd.ts
samples/: typescript.toml
samples/codes/: gcd.ts
src/: main.rs
src/lib/: mod.rs
