[package]
name = 'snippets-make'
version = '0.202104.2'
edition = '2018'
authors = ['fuyutarow <fuyutarow@gmail.com>']
repository = "https://github.com/fuyutarow/snippets-make"
keywords = ["snippet"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
description = "A CLI tool for code snippets"
edition = "2018"

[lib]
name = 'cli'
path = 'src/lib/mod.rs'

[dependencies]
serde = '1.0.125'
serde_derive = '1.0.125'
toml = '0.5.8'
structopt = '0.3.21'
serde_json = '1.0.64'
