[package]
version = '0.202104.5'
name = 'snippets-make'
description = 'A CLI tool for code snippets'
edition = '2018'
license = 'MIT'
authors = ['fuyutarow <fuyutarow@gmail.com>']
repository = 'https://github.com/fuyutarow/snippets-make'
keywords = ['snippet']
categories = ['command-line-utilities']
readme = 'README.md'
[package.metadata.rpm.cargo]
buildflags = ['--release']
target = 'x86_64-unknown-linux-musl'
[package.metadata.rpm.targets.procs]
path = '/usr/bin/snippets-make'

[lib]
name = 'cli'
path = 'src/lib/mod.rs'

[dependencies]
serde = '1.0.125'
serde_derive = '1.0.125'
toml = '0.5.8'
structopt = '0.3.21'
serde_json = '1.0.64'
os_info = "3.0.2"
dirs = "3.0.1"
itertools = "0.10.0"
anyhow = "1.0.40"
